--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.mvc.view.prefix=/WEB-INF/JSP/
 spring.mvc.view.suffix=.jsp
+
+spring.datasource.url=jdbc:postgresql://localhost:5555/admin_panel
+spring.datasource.username=admin_panel
+spring.datasource.password=admin_panel
+
+spring.liquibase.change-log=classpath:/db/changelog/master.xml
